Fixed timer not showing.

--- a/code/ui/Timer.scss
+++ b/code/ui/Timer.scss
@@ -28,7 +28,7 @@ Timer {
 		font-weight: 700;
 
 		&.Show {
-			display: block;
+			display: flex;
 		}
 	}
 }
